--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ build/Release
 node_modules/
 jspm_packages/
 .env
-
+package.json
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
